--- a/index.html
+++ b/index.html
@@ -362,29 +362,29 @@
         ? "http://localhost:5000"
         : "https://fork-forchetta-api-l5ze.onrender.com";
       const getId = (r) => r && (r._id || r.id);
-      function imgSrc(u, w = 800) {
+      function imgSrc(u) {
         if (!u) return "";
-        let src = String(u).replace(
-          "http://fork-forchetta-api.onrender.com",
-          "https://fork-forchetta-api.onrender.com"
+        let src = String(u);
+
+        src = src.replace(
+          "http://fork-forchetta-api-l5ze.onrender.com",
+          "https://fork-forchetta-api-l5ze.onrender.com"
         );
-        if (!/^https?:\/\//i.test(src)) {
-          if (!src.startsWith("/uploads/"))
+
+        if (src.includes("res.cloudinary.com")) {
+          return src.replace("/upload/", "/upload/f_auto,q_auto,w_700/");
+        }
+
+        if (!src.startsWith("http")) {
+          if (!src.startsWith("/uploads/")) {
             src = "/uploads/" + src.replace(/^\/+/, "");
+          }
           src = API_URL + src;
         }
-        try {
-          const isCloud =
-            src.includes("res.cloudinary.com") && src.includes("/upload/");
-          if (isCloud) {
-            src = src.replace(
-              "/upload/",
-              `/upload/f_auto,q_auto,c_fill,w_${w}/`
-            );
-          }
-        } catch (e) {}
+
         return src;
       }
+
       let lang = "en";
       let editId = null;
       let currentData = [];
@@ -850,6 +850,3 @@
     </div>
   </body>
 </html>
-
-
-
