--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
     <link rel="icon" href="data:," />
-    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin />
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <link rel="dns-prefetch" href="//res.cloudinary.com">
+    <link rel="preconnect" href="https://fork-forchetta-api-l5ze.onrender.com" crossorigin>
+    <link rel="dns-prefetch" href="//fork-forchetta-api-l5ze.onrender.com">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+
     <meta name="theme-color" content="#b52e31" />
     <style>
       :root {
@@ -356,7 +364,7 @@
         <span class="visually-hidden">Top</span>
       </button>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       const API_URL = window.location.hostname.includes("localhost")
         ? "http://localhost:5000"
@@ -585,11 +593,15 @@
           col.className = "col-12 col-md-6 d-flex";
           const src = imgSrc(r.imageUrl, 800);
           const frontImg = r.imageUrl
-            ? `<img src="${src}" alt="${r.title || ""}"
-                   class="card-img-top"
-                   loading="lazy" decoding="async"
-                   sizes="(max-width: 576px) 100vw, (max-width: 991px) 50vw, 33vw">`
+            ? `<img src="${imgSrc(r.imageUrl)}"
+           class="card-img-top"
+           style="height:200px;object-fit:cover;"
+           loading="lazy"
+           decoding="async"
+           width="700" height="200"
+           alt="${r.title || "Recipe image"}">`
             : "";
+
           const ingredientsListHtml = (r.ingredients || [])
             .map((i) => `&bull; ${i}`)
             .join("<br>");
