--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
     <link rel="icon" href="data:," />
-    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
-    <link rel="dns-prefetch" href="//res.cloudinary.com">
-    <link rel="preconnect" href="https://fork-forchetta-api-l5ze.onrender.com" crossorigin>
-    <link rel="dns-prefetch" href="//fork-forchetta-api-l5ze.onrender.com">
-    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-    <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin />
+    <link rel="dns-prefetch" href="//res.cloudinary.com" />
+    <link
+      rel="preconnect"
+      href="https://fork-forchetta-api-l5ze.onrender.com"
+      crossorigin
+    />
+    <link rel="dns-prefetch" href="//fork-forchetta-api-l5ze.onrender.com" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
+    <link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
 
     <meta name="theme-color" content="#b52e31" />
     <style>
@@ -364,32 +368,46 @@
         <span class="visually-hidden">Top</span>
       </button>
     </main>
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    ></script>
     <script>
+      const CLOUD_NAME = "dn9qbyrje";
+
       const API_URL = window.location.hostname.includes("localhost")
         ? "http://localhost:5000"
         : "https://fork-forchetta-api-l5ze.onrender.com";
-      const getId = (r) => r && (r._id || r.id);
-      function imgSrc(u) {
-        if (!u) return "";
-        let src = String(u);
 
-        src = src.replace(
+      const getId = (r) => r && (r._id || r.id);
+
+      function imgSrc(u, w = 700, h = 200, cover = true) {
+        if (!u) return "";
+        let src = String(u).replace(
           "http://fork-forchetta-api-l5ze.onrender.com",
           "https://fork-forchetta-api-l5ze.onrender.com"
         );
 
-        if (src.includes("res.cloudinary.com")) {
-          return src.replace("/upload/", "/upload/f_auto,q_auto,w_700/");
+        if (src.includes("res.cloudinary.com") && src.includes("/upload/")) {
+          const fill = cover ? `,h_${h},c_fill,g_auto` : "";
+          return src.replace(
+            "/upload/",
+            `/upload/f_auto,q_auto,dpr=auto,w_${w}${fill}/`
+          );
         }
 
-        if (!src.startsWith("http")) {
-          if (!src.startsWith("/uploads/")) {
+        const looksLikeFilename =
+          /^[\w\-\/]+?\.(jpe?g|png|webp|gif|avif)$/i.test(src);
+        if (looksLikeFilename) {
+          const fill = cover ? `,h_${h},c_fill,g_auto` : "";
+          return `https://res.cloudinary.com/${dn9qbyrje}/image/upload/f_auto,q_auto,dpr=auto,w_${w}${fill}/${src}`;
+        }
+
+        if (!/^https?:\/\//i.test(src)) {
+          if (!src.startsWith("/uploads/"))
             src = "/uploads/" + src.replace(/^\/+/, "");
-          }
           src = API_URL + src;
         }
-
         return src;
       }
 
@@ -400,6 +418,7 @@
       let page = 1;
       const LIMIT = 4;
       let ingredientsArr = [];
+
       function renderIngredients() {
         const ul = document.getElementById("ingredientList");
         ul.innerHTML = "";
@@ -420,6 +439,7 @@
           ul.appendChild(li);
         });
       }
+
       const t = {
         en: {
           addTitle: "Add New Recipe",
@@ -492,6 +512,7 @@
           showLess: "Mostra meno",
         },
       };
+
       const ingInput = document.getElementById("ingredientInput");
       const addIngBtn = document.getElementById("addIngredientBtn");
       if (addIngBtn && ingInput) {
@@ -509,6 +530,7 @@
           }
         });
       }
+
       function hookFilePicker() {
         const input = document.getElementById("image");
         const btn = document.getElementById("chooseFileBtn");
@@ -523,6 +545,7 @@
         input.addEventListener("change", updateHint);
         updateHint();
       }
+
       function applyTexts() {
         document.querySelector(".navbar-brand").textContent =
           "🍲 Fork & Forchetta";
@@ -559,6 +582,7 @@
         document.getElementById("aboutBody").textContent = t[lang].aboutBody;
         renderList(currentData);
       }
+
       document.getElementById("lang-en").onclick = () => {
         lang = "en";
         applyTexts();
@@ -567,6 +591,7 @@
         lang = "it";
         applyTexts();
       };
+
       function showAlert(msg, type = "success") {
         const box = document.getElementById("alertBox");
         box.className = `alert alert-${type}`;
@@ -574,11 +599,13 @@
         box.classList.remove("d-none");
         setTimeout(() => box.classList.add("d-none"), 1800);
       }
+
       function setBusy(on) {
         const btn = document.getElementById("submitBtn");
         btn.disabled = on;
         btn.textContent = on ? "..." : editId ? t[lang].update : t[lang].add;
       }
+
       function renderList(data) {
         currentData = data;
         const grid = document.getElementById("recipeGrid");
@@ -588,18 +615,25 @@
           renderPager({ total: 0, pages: 1 });
           return;
         }
+
         data.forEach((r) => {
           const col = document.createElement("div");
           col.className = "col-12 col-md-6 d-flex";
-          const src = imgSrc(r.imageUrl, 800);
+
+          const isFirstCard = grid.children.length === 0; // LCP adayı
+
           const frontImg = r.imageUrl
-            ? `<img src="${imgSrc(r.imageUrl)}"
-           class="card-img-top"
-           style="height:200px;object-fit:cover;"
-           loading="lazy"
-           decoding="async"
-           width="700" height="200"
-           alt="${r.title || "Recipe image"}">`
+            ? `<img
+             src="${imgSrc(r.imageUrl)}"
+             class="card-img-top"
+             style="height:200px;object-fit:cover;"
+             width="700" height="200"
+             ${
+               isFirstCard
+                 ? 'loading="eager" fetchpriority="high" decoding="async"'
+                 : 'loading="lazy" decoding="async"'
+             }
+             alt="${(r.title || "Recipe image").replace(/"/g, "&quot;")}">`
             : "";
 
           const ingredientsListHtml = (r.ingredients || [])
@@ -611,39 +645,42 @@
               : lang === "it"
               ? "Nessuna istruzione ancora."
               : "No instructions yet.";
+
+          const idAttr = getId(r);
+
           col.innerHTML = `
-            <div class="flip-card h-100 w-100" tabindex="0" aria-label="Recipe card">
-              <div class="flip-inner">
-                <div class="flip-front card h-100">
-                  ${frontImg}
-                  <div class="card-body">
-                    <h5 class="card-title mb-2">${r.title}</h5>
-                    <div class="card-text text-muted small mb-2 scroll-area clamp-ingredients">${ingredientsListHtml}</div>
-                    <button type="button" class="btn btn-link p-0 small more-btn"></button>
-                   
-                    <div class="d-flex align-items-center justify-content-between action-row">
-                        <div class="action-buttons">
-                          <button class="btn btn-outline-secondary btn-sm edit-btn">${t[lang].edit}</button>
-                          <button class="btn btn-outline-danger btn-sm del-btn">${t[lang].del}</button>
-                        </div>
-                        <div class="text-muted small flip-hint">${t[lang].backHint}</div>
-                        </div>
+        <div class="flip-card h-100 w-100" tabindex="0" aria-label="Recipe card">
+          <div class="flip-inner">
+            <div class="flip-front card h-100">
+              ${frontImg}
+              <div class="card-body">
+                <h5 class="card-title mb-2">${r.title}</h5>
+                <div class="card-text text-muted small mb-2 scroll-area clamp-ingredients">${ingredientsListHtml}</div>
+                <button type="button" class="btn btn-link p-0 small more-btn"></button>
+                <div class="d-flex align-items-center justify-content-between action-row">
+                  <div class="action-buttons">
+                    <button class="btn btn-outline-secondary btn-sm edit-btn" data-id="${idAttr}">${t[lang].edit}</button>
+                    <button class="btn btn-outline-danger btn-sm del-btn" data-id="${idAttr}">${t[lang].del}</button>
                   </div>
-                </div>
-                <div class="flip-back card h-100">
-                  <div class="card-body d-flex flex-column">
-                    <h6 class="text-uppercase text-muted mb-2">${t[lang].howTo}</h6>
-                    <div class="small back-scroll" style="white-space: pre-wrap;">${backInstructions}</div>
-                    <div class="mt-auto d-flex justify-content-end">
-                      <div class="text-muted small flip-hint">${t[lang].backHint}</div>
-                    </div>
-                  </div>
+                  <div class="text-muted small flip-hint">${t[lang].backHint}</div>
                 </div>
               </div>
             </div>
-          `;
+            <div class="flip-back card h-100">
+              <div class="card-body d-flex flex-column">
+                <h6 class="text-uppercase text-muted mb-2">${t[lang].howTo}</h6>
+                <div class="small back-scroll" style="white-space: pre-wrap;">${backInstructions}</div>
+                <div class="mt-auto d-flex justify-content-end">
+                  <div class="text-muted small flip-hint">${t[lang].backHint}</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      `;
           grid.appendChild(col);
         });
+
         grid.querySelectorAll(".flip-card").forEach((el) => {
           const toggle = (e) => {
             if (e.target.closest("button")) return;
@@ -657,13 +694,15 @@
             }
           });
         });
-        document
+
+        grid
           .querySelectorAll(".edit-btn")
           .forEach((btn) => (btn.onclick = () => startEdit(btn.dataset.id)));
-        document
+        grid
           .querySelectorAll(".del-btn")
           .forEach((btn) => (btn.onclick = () => deleteRecipe(btn.dataset.id)));
-        document.querySelectorAll(".more-btn").forEach((btn) => {
+
+        grid.querySelectorAll(".more-btn").forEach((btn) => {
           const area = btn.previousElementSibling;
           const setText = () => {
             btn.textContent = area.classList.contains("expanded")
@@ -678,6 +717,7 @@
             requestAnimationFrame(adjustFlipHeights);
           });
         });
+
         function adjustFlipHeights() {
           document.querySelectorAll(".flip-inner").forEach((inner) => {
             const front = inner.querySelector(".flip-front");
@@ -692,6 +732,7 @@
           if (!img.complete) img.addEventListener("load", adjustFlipHeights);
         });
       }
+
       function renderPager({ total, pages }) {
         const info = document.getElementById("pagerInfo");
         const prev = document.getElementById("prevBtn");
@@ -711,6 +752,7 @@
           fetchRecipes();
         };
       }
+
       async function fetchRecipes() {
         const params = new URLSearchParams();
         if (query) params.set("search", query);
@@ -730,6 +772,7 @@
         renderList(items);
         renderPager({ total, pages });
       }
+
       async function createRecipeFD({
         title,
         ingredients,
@@ -748,6 +791,7 @@
         if (!res.ok) throw new Error("Create failed");
         return res.json();
       }
+
       async function updateRecipeFD(
         id,
         { title, ingredients, imageFile, instructions }
@@ -764,6 +808,7 @@
         if (!res.ok) throw new Error("Update failed");
         return res.json();
       }
+
       async function startEdit(id) {
         const res = await fetch(`${API_URL}/recipes/${id}`, {
           headers: { Accept: "application/json" },
@@ -788,6 +833,7 @@
         editId = getId(r);
         window.scrollTo({ top: 0, behavior: "smooth" });
       }
+
       async function deleteRecipe(id) {
         if (!confirm(t[lang].confirmDelete)) return;
         const res = await fetch(`${API_URL}/recipes/${id}`, {
@@ -806,6 +852,7 @@
         showAlert(t[lang].deleted, "success");
         fetchRecipes();
       }
+
       function cancelEdit() {
         editId = null;
         document.getElementById("recipeForm").reset();
@@ -816,13 +863,16 @@
         ingredientsArr = [];
         renderIngredients();
       }
+
       document.getElementById("cancelEditBtn").onclick = cancelEdit;
+
       document.getElementById("searchForm").addEventListener("submit", (e) => {
         e.preventDefault();
         query = document.getElementById("searchInput").value.trim();
         page = 1;
         fetchRecipes();
       });
+
       let searchTmr;
       document.getElementById("searchInput").addEventListener("input", (e) => {
         clearTimeout(searchTmr);
@@ -832,6 +882,7 @@
           fetchRecipes();
         }, 300);
       });
+
       const btnTop = document.getElementById("btnTop");
       btnTop.addEventListener("click", () =>
         window.scrollTo({ top: 0, behavior: "smooth" })
@@ -839,9 +890,11 @@
       window.addEventListener("scroll", () => {
         btnTop.style.display = window.scrollY > 300 ? "block" : "none";
       });
+
       hookFilePicker();
       fetchRecipes().then(applyTexts);
     </script>
+
     <div class="modal fade" id="contactModal" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
