--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     ></script>
     <script>
+      const getId = (r) => r && (r._id || r.id) || "";
+      
       const CLOUD_NAME = "dn9qbyrje";
 
       const API_URL = location.hostname.includes("localhost")
