--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     ></script>
     <script>
-      const getId = (r) => r && (r._id || r.id) || "";
-      
+      const getId = (r) => (r && (r._id || r.id)) || "";
+
       const CLOUD_NAME = "dn9qbyrje";
 
       const API_URL = location.hostname.includes("localhost")
@@ -389,23 +389,16 @@
         );
 
         if (
-          src.startsWith("https://res.cloudinary.com/") &&
-          src.includes("/upload/")
+          /^https?:\/\/res\.cloudinary\.com\/[^/]+\/image\/upload\//i.test(src)
         ) {
           const fill = cover ? `,h_${h},c_fill,g_auto` : "";
-
-          if (!/\/upload\/.*(f_auto|q_auto|w_)/.test(src)) {
-            src = src.replace(
-              "/upload/",
-              `/upload/f_auto,q_auto,dpr=auto,w_${w}${fill}/`
-            );
-          }
-          return src;
+          return src.replace(
+            "/upload/",
+            `/upload/f_auto,q_auto,dpr=auto,w_${w}${fill}/`
+          );
         }
 
-        const looksLikeFilename =
-          /^[\w\-\/]+?\.(?:jpe?g|png|webp|gif|avif)$/i.test(src);
-        if (looksLikeFilename) {
+        if (/^[\w\-\/]+?\.(?:jpe?g|png|webp|gif|avif)$/i.test(src)) {
           const fill = cover ? `,h_${h},c_fill,g_auto` : "";
           return `https://res.cloudinary.com/${CLOUD_NAME}/image/upload/f_auto,q_auto,dpr=auto,w_${w}${fill}/${src}`;
         }
@@ -627,21 +620,22 @@
           const col = document.createElement("div");
           col.className = "col-12 col-md-6 d-flex";
 
-          const isFirstCard = grid.children.length === 0; // LCP adayı
+          console.debug('img raw:', r.imageUrl, '->', imgSrc(r.imageUrl));
 
+          const isFirstCard = grid.children.length === 0; 
           const frontImg = r.imageUrl
             ? `<img
-             src="${imgSrc(r.imageUrl)}"
-             onerror="this.onerror=null;this.src='https://res.cloudinary.com/dn9qbyrje/image/upload/f_auto,q_auto,w_700,h_200,c_fill,g_auto/sample.jpg';"
-             class="card-img-top"
-             style="height:200px;object-fit:cover;"
-             width="700" height="200"
-             ${
-               isFirstCard
-                 ? 'loading="eager" fetchpriority="high" decoding="async"'
-                 : 'loading="lazy" decoding="async"'
-             }
-             alt="${(r.title || "Recipe image").replace(/"/g, "&quot;")}">`
+       src="${imgSrc(r.imageUrl)}"
+       class="card-img-top"
+       style="height:200px;object-fit:cover;"
+       width="700" height="200"
+       ${
+         isFirstCard
+           ? 'loading="eager" fetchpriority="high" decoding="async"'
+           : 'loading="lazy" decoding="async"'
+       }
+       onerror="this.onerror=null;this.src='https://res.cloudinary.com/demo/image/upload/f_auto,q_auto,w_700,h_200,c_fill,g_auto/sample.jpg';"
+       alt="${(r.title || "Recipe image").replace(/"/g, "&quot;")}">`
             : "";
 
           const ingredientsListHtml = (r.ingredients || [])
