fix(img): use CLOUD_NAME and build/optimize Cloudinary URLs; remove fallback

--- a/index.html
+++ b/index.html
@@ -388,9 +388,10 @@
           "https://fork-forchetta-api.onrender.com"
         );
 
-        if (
-          /^https?:\/\/res\.cloudinary\.com\/[^/]+\/image\/upload\//i.test(src)
-        ) {
+        const isCloud =
+          src.startsWith("https://res.cloudinary.com/") &&
+          src.includes("/upload/");
+        if (isCloud) {
           const fill = cover ? `,h_${h},c_fill,g_auto` : "";
           return src.replace(
             "/upload/",
@@ -398,7 +399,8 @@
           );
         }
 
-        if (/^[\w\-\/]+?\.(?:jpe?g|png|webp|gif|avif)$/i.test(src)) {
+        const isFilename = /^[\w\-\/]+?\.(jpe?g|png|webp|gif|avif)$/i.test(src);
+        if (isFilename) {
           const fill = cover ? `,h_${h},c_fill,g_auto` : "";
           return `https://res.cloudinary.com/${CLOUD_NAME}/image/upload/f_auto,q_auto,dpr=auto,w_${w}${fill}/${src}`;
         }
@@ -620,9 +622,9 @@
           const col = document.createElement("div");
           col.className = "col-12 col-md-6 d-flex";
 
-          console.debug('img raw:', r.imageUrl, '->', imgSrc(r.imageUrl));
+          console.debug("img raw:", r.imageUrl, "->", imgSrc(r.imageUrl));
 
-          const isFirstCard = grid.children.length === 0; 
+          const isFirstCard = grid.children.length === 0;
           const frontImg = r.imageUrl
             ? `<img
        src="${imgSrc(r.imageUrl)}"
@@ -634,7 +636,6 @@
            ? 'loading="eager" fetchpriority="high" decoding="async"'
            : 'loading="lazy" decoding="async"'
        }
-       onerror="this.onerror=null;this.src='https://res.cloudinary.com/demo/image/upload/f_auto,q_auto,w_700,h_200,c_fill,g_auto/sample.jpg';"
        alt="${(r.title || "Recipe image").replace(/"/g, "&quot;")}">`
             : "";
 
